[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LZGraphs"
dynamic = ["version"]
description = "An Implementation of LZ76 Based Graphs for Repertoire Representation and Analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com"}
]
maintainers = [
    {name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com"}
]
keywords = [
    "Graph Theory",
    "Immunology",
    "Analytics",
    "Biology",
    "T-cell",
    "Repertoire",
    "CDR3",
    "Bioinformatics",
    "LZ76",
    "Lempel-Ziv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "tqdm>=4.65",
    "scipy>=1.10",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/MuteJester/LZGraphs"
Documentation = "https://mutejester.github.io/LZGraphs/"
Repository = "https://github.com/MuteJester/LZGraphs"
Issues = "https://github.com/MuteJester/LZGraphs/issues"
Changelog = "https://github.com/MuteJester/LZGraphs/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["LZGraphs", "LZGraphs.graphs", "LZGraphs.metrics", "LZGraphs.utilities", "LZGraphs.mixins", "LZGraphs.bag_of_words", "LZGraphs.visualization", "LZGraphs.exceptions"]

[tool.setuptools.dynamic]
version = {attr = "LZGraphs.__version__"}

[tool.setuptools.package-data]
LZGraphs = ["py.typed"]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | \.eggs
    | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["LZGraphs"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__
"tests/*" = ["B", "C"]            # Relax rules in tests

# =============================================================================
# Testing Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/LZGraphs"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Semantic Release Configuration
# =============================================================================

[tool.semantic_release]
version_toml = []
version_variables = ["src/LZGraphs/__init__.py:__version__"]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "chore\\(release\\):",
    "Merge pull request",
    "Merge branch",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
