[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LZGraphs"
dynamic = ["version"]
description = "High-performance LZ76 compression graphs for immune receptor repertoire analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com"}
]
maintainers = [
    {name = "Thomas Konstantinovsky", email = "thomaskon90@gmail.com"}
]
keywords = [
    "Graph Theory",
    "Immunology",
    "Analytics",
    "Biology",
    "T-cell",
    "Repertoire",
    "CDR3",
    "Bioinformatics",
    "LZ76",
    "Lempel-Ziv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "build>=1.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/MuteJester/LZGraphs"
Documentation = "https://mutejester.github.io/LZGraphs/"
Repository = "https://github.com/MuteJester/LZGraphs"
Issues = "https://github.com/MuteJester/LZGraphs/issues"
Changelog = "https://github.com/MuteJester/LZGraphs/blob/master/CHANGELOG.md"

[project.scripts]
lzg = "LZGraphs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["LZGraphs"]

[tool.setuptools.dynamic]
version = {attr = "LZGraphs.__version__"}

[tool.setuptools.package-data]
LZGraphs = ["_clzgraph.c"]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | \.eggs
    | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["LZGraphs"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports and star imports in __init__
"tests/*" = ["B", "C"]            # Relax rules in tests

# =============================================================================
# Testing Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/LZGraphs"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# cibuildwheel — cross-platform wheel building
# =============================================================================

[tool.cibuildwheel]
# Skip PyPy, musllinux i686, win32
skip = "pp* *-musllinux_i686 *-win32"
# Smoke test: import the C extension
test-command = "python -c \"from LZGraphs import LZGraph; print('LZGraphs C backend OK')\""

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
